--- a/lab1.Rmd
+++ b/lab1.Rmd
@@ -12,7 +12,7 @@ The following illustrate commands for exploring this exercise using R and variou
 
 Try to load the `ISLR` library
 ```{r}
-library(ISLR)
+library(ISLR)  # load the library
 ```
 
 If it is not available you will need to install the  library from CRAN. Click on  *Packages*  then *Install*.  Enter the package name then click on the Install button.
@@ -73,7 +73,8 @@ There `base` `R` version of scatter plot matrices is obtained using the `pairs` 
 look at the first 5 columns.  
 
 ```{r, fig.width=8}
-pairs(College[, 1:5])
+#pairs(College[ , c(2,1, 3:5)])
+pairs(Apps ~ Private+ Accept + Enroll+ Top10perc, data=College)
 ```
 
 We can also look at this using the `ggpairs` function.
